# SoftwareEngineering2

./: README.md
Workshop 1/: README.md
Workshop 2/: README.md
Workshop 3/: README.md
Workshop 4/: README.md
Workshop-2/: BPMN.puml  README.md  VetTrack.sql
Workshop-3/: docker-compose.yml
Workshop-3/Backend/: .gitignore
Workshop-3/Backend/vet-business-service/: .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
Workshop-3/Backend/vet_auth_service/: .coveragerc  .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Workshop-3/Backend/vet_auth_service/app/: config.py  database.py  db.py  dependencies.py  exceptions.py  main.py  models.py  repositories.py  routes.py  schemas.py  security.py  services.py
Workshop-3/Backend/vet_auth_service/test/: conftest.py  set_up_test_db.sh  test_api.py  test_repositories.py  test_services.py
Workshop-3/Frontend/vettrack/: .dockerignore  .env  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
Workshop-3/Frontend/vettrack-front/: package-lock.json  package.json
Workshop-3/Frontend/vettrack/src/: App.vue  main.ts
Workshop-3/Frontend/vettrack/src/composables/: useFormatting.ts  useMedicationHelpers.ts  usePatientData.ts
Workshop-3/Frontend/vettrack/src/lib/: httpError.ts
Workshop-3/Frontend/vettrack/src/router/: index.js  index.ts
Workshop-3/vettrack-db/: Dockerfile  README.md
Workshop-3/vettrack-db/init/: 00-init-vettrack.sh
Workshop-3/vettrack-db/sql/: 00-schema.sql  10-common-seed.sql  20-dev-seed.sql
(+105 files in other folders)
