[project]
name = "vet-auth-service"
version = "0.1.0"
description = "This is the authentication service for the VetTrack application. This service is responsible for user registration, login, and session management."
authors = [
    {name = "Miguel Angel Buitrago Castillo",email = "mbuitragoc@unal.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (==0.121.3)",
    "uvicorn (==0.38.0)",
    "sqlalchemy (==2.0.44)",
    "psycopg2-binary (==2.9.11)",
    "python-dotenv (==1.2.1)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt < 4.0.0",
    "email-validator (==2.3.0)",
    "pyinstaller (==6.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==7.4.3)",
    "pytest-asyncio (==0.21.1)",
    "pytest-cov (==4.1.0)",
    "pytest-mock (==3.12.0)",
    "faker (==20.1.0)",
    "httpx (==0.25.2)"
]
